--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <ul id="menu">
     <div class="left">
-      <li class="left"><a href="#">BRAND</a></li>
+      <li class="left"><a href="./brand.html" target="_blank">BRAND</a></li>
       <li class="left"><a href="#">BROWSE</a></li>
     </div>
     <div class="right">
