--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="44NMeXZ6VX-TOmrZxj8UXqnLAbrdeV4rHE62_Ggm6qY" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116693508-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-116693508-1');
+</script>
+
 </head>
 <body>
   <ul id="menu">
