--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 <title>Ky Duyen</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="description" content="We've created neighborhood guides for cities all around the world.">
+<meta name=”keywords” content=”neighborhood guides,travel,host,beauty,popular”/>
 <meta name="google-site-verification" content="44NMeXZ6VX-TOmrZxj8UXqnLAbrdeV4rHE62_Ggm6qY" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116693508-1"></script>
